--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,17 @@
 .App-link {
   color: #61dafb;
 }
+.psudo:hover{
+
+  color: blue !important;
+}
+
+/* .psudo:hover {
+
+  color: rgb(174, 0, 255);
+} */
+
+
 
 @keyframes App-logo-spin {
   from {
